[build-system]
requires = [
  "setuptools>=82.0.1",
  "wheel",
  "Cython>=3.2.4",
  "cmake>=4.3.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "cykit"
version = "0.0.8"
description = "Cython utilities collection"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = [
                    "LICENSE-MIT",
                    "LICENSE-APACHE"
                ]
authors = [
  { name = "Tapan Hazarika", email = "tapanhaz@gmail.com" }
]

requires-python = ">=3.9"
dependencies = [ "certifi>=2026.2.25", ] 

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Cython",
]

[tool.cibuildwheel]
build-frontend = "build"
manylinux-x86_64-image = "manylinux_2_28" 
manylinux-aarch64-image = "manylinux_2_28"
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }

[tool.cibuildwheel.windows]

[project.urls]
Homepage = "https://github.com/Tapanhaz/cykit"
Source = "https://github.com/Tapanhaz/cykit"
Issues = "https://github.com/Tapanhaz/cykit/issues"